Fix sidebar hamburger menu positioning and alignment

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -14,7 +14,7 @@ $dark: rgb(33, 33, 33);
 $grey: rgb(135, 135, 135);
 $light-grey: rgb(244, 244, 244);
 
-$shadow: 0 5px 13px -5px rgba(0, 0, 0, 1);
-$shadow-hover: 2px 7px 16px -5px rgba(0, 0, 0, 1);
+$shadow: 0 5px 13px -5px rgba(0, 0, 0, 0.3);
+$shadow-hover: 2px 7px 16px -5px rgba(0, 0, 0, 0.4);
 
 $font-text: 'Lato', sans-serif;
